[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy>=1.17.0; python_version>='3.8'"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"


# Linux-specific settings
[tool.cibuildwheel.linux]
# Which manylinux images to use for compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
# Architectures: auto64 = x86_64 + aarch64, x86 = 32-bit (i686)
archs = ["auto64", "x86"]

# macOS-specific settings
[tool.cibuildwheel.macos]
# macOS supports only 64-bit architectures
# x86_64 = Intel, arm64 = Apple Silicon, universal2 = both in one file
archs = ["x86_64", "arm64"]

# Windows-specific settings
[tool.cibuildwheel.windows]
# Windows architectures: AMD64 = 64-bit, x86 = 32-bit
archs = ["AMD64", "x86"]